--- a/Main/assets/css/mystyle.css
+++ b/Main/assets/css/mystyle.css
@@ -7,15 +7,15 @@
 /* Element Selectors */
 body {
   position: relative;
-  font-family: "Goudy Bookletter 1911", sans-serif;
+  font-family: fantasy;
   font-size: 20px;
-  background-color: #FDF8F5;
+  background-color: #fff5f6;
   color: #d35d8e;
 }
 
 h1,
 h2 {
-  margin: 20px;
+  margin: 50px;
 }
 
 main {
@@ -25,11 +25,11 @@ main {
 li {
   display: inline;
   padding: 0px 20px;
-  text-decoration: none;
+  text-decoration:dotted;
 }
 
 a {
-  text-decoration: none;
+  text-decoration:dotted;
   color: #FDF8F5;
 }
 
